--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 [Bb]uilds/
 [Ll]ogs/
 
-# Uncomment this line if you wish to ignore the asset store tools plugin
-# [Aa]ssets/AssetStoreTools*
+# Uncomment this line if you wish to ignore the asset store tools plugin[Aa]ssets/AssetStoreTools*
 
 # Visual Studio cache directory
 .vs/
